workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__project_picker_windows_a_long_list_around_the_selection.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
" PROJECTS                   │                                                                       "
"▐▾ api                      │                                                                       "
"   ◉ fix-login              │                                                                       "
"   ◆ rate-limit             │       ┌ Add project ─────────────────────────────────────────┐        "
"   ○ docs-update            │       │  ~/Workspace/                                  15/35 │        "
" ▾ web                      │       │  › ▏                                                 │        "
"   ✔ new-checkout           │       │                                                      │        "
" ▾ lisa                     │       │    ● service-02                                      │        "
"   no worktrees · n         │       │    ● service-03                                      │        "
"                            │       │    ● service-04                                      │        "
"                            │       │    ● service-05                                      │        "
"                            │       │    ● service-06                                      │        "
"                            │       │    ● service-07                                      │        "
"                            │       │    ● service-08                                      │        "
"                            │       │    ● service-09                                      │        "
"                            │       │    ● service-10                                      │        "
"                            │       │  ▐ ● service-11                                      │        "
"                            │       │                                                      │        "
"                            │       │  ⏎ add · → open · ← up · esc cancel                  │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
