workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__refused_removal_explains_and_offers_force.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
" PROJECTS                   │                                                                       "
" ▾ api                      │                                                                       "
"▐  ◉ fix-login              │       ┌ Remove worktree ─────────────────────────────────────┐        "
"   ◆ rate-limit             │       │  Remove fix-login?                                   │        "
"   ○ docs-update            │       │  Deletes the worktree and the local branch fix-login.│        "
" ▾ web                      │       │  The remote branch is kept.                          │        "
"   ✔ new-checkout           │       │                                                      │        "
" ▾ lisa                     │       │  Refused: 2 uncommitted change(s)                    │        "
"   no worktrees · n         │       │  f force · esc cancel                                │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
