workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__removing_a_missing_worktree_promises_nothing_about_a_branch.snap
---
source: src/ui/render_tests.rs
expression: t.backend()
---
" PROJECTS                   │                                                                       "
" ▾ api                      │                                                                       "
"▐  ⊘ gone                   │                                                                       "
" ▾ lisa                     │                                                                       "
"   no worktrees · n         │                                                                       "
" ▾ web                      │                                                                       "
"   no worktrees · n         │       ┌ Remove worktree ─────────────────────────────────────┐        "
"                            │       │  Remove gone?                                        │        "
"                            │       │  Its folder is already gone.                         │        "
"                            │       │  Only the list entry is removed.                     │        "
"                            │       │                                                      │        "
"                            │       │  ⏎ remove from list · esc cancel                     │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
