workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__renaming_a_project_says_the_folder_keeps_its_name.snap
---
source: src/ui/render_tests.rs
expression: t.backend()
---
" PROJECTS                   │                                                                       "
" ▾ B-Metric                 │                                                                       "
"   ◉ fix-ingest-lag     api │                                                                       "
"   ◆ dashboard-filter   web │       ┌ Rename project ──────────────────────────────────────┐        "
" ▾ bloom                    │       │› Name    lisa▏                                       │        "
"   no worktrees · n         │       │  Sidebar name only; empty restores the folder name   │        "
"▐▾ lisa                     │       │                                                      │        "
"   ✔ sidebar-groups         │       │  ⏎ rename · esc cancel                               │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
