workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__renaming_a_worktree_edits_its_row_and_previews_the_branch_in_the_footer.snap
---
source: src/ui/render_tests.rs
expression: t.backend()
---
" PROJECTS                   │                                                                       "
" ▾ B-Metric                 │                                                                       "
"▐  ◉ fix-ingest-lag V2▏     │                                                                       "
"   ◆ dashboard-filter   web │                                                                       "
" ▾ bloom                    │                                                                       "
"   no worktrees · n         │                                                                       "
" ▾ lisa                     │                                                                       "
"   ✔ sidebar-groups         │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
" branch: fix-ingest-lag-v2 · ⏎ rename · esc cancel                                                  "
