workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__renaming_a_worktree_previews_the_branch.snap
---
source: src/ui/render_tests.rs
expression: t.backend()
---
" PROJECTS                   │                                                                       "
" ▾ B-Metric                 │                                                                       "
"▐  ◉ fix-ingest-lag     api │                                                                       "
"   ◆ dashboard-filter   web │       ┌ Rename worktree ─────────────────────────────────────┐        "
" ▾ bloom                    │       │› Name    fix-ingest-lag V2▏                          │        "
"   no worktrees · n         │       │          branch: fix-ingest-lag-v2                   │        "
" ▾ lisa                     │       │                                                      │        "
"   ✔ sidebar-groups         │       │  ⏎ rename · esc cancel                               │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
