workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__review_without_a_route_has_no_verdict_and_no_task.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
" PROJECTS                   │                                                                       "
"▐▾ api                      │                                                                       "
"   ◉ fix-login              │                                                                       "
"   ◆ rate-limit             │                                                                       "
"   ○ docs-update            │                                                                       "
" ▾ lisa                     │                                                                       "
"   no worktrees · n         │       ┌ New worktree in api · staccato ──────────────────────┐        "
" ▾ web                      │       │› Agent   ● claude                                    │        "
"   ✔ new-checkout           │       │          ○ opencode  no full autonomy                │        "
"                            │       │          ○ gemini  not installed                     │        "
"                            │       │                                                      │        "
"                            │       │  Model   ‹ default ›                                 │        "
"                            │       │                                                      │        "
"                            │       │  Mode    (•) normal   ( ) full autonomy              │        "
"                            │       │                                                      │        "
"                            │       │  ⏎ create · tab next field · ←→ change · esc cancel  │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
