workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__routing_shows_on_the_selected_agent_row.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
" PROJECTS                   │                                                                       "
"▐▾ api                      │                                                                       "
"   ◉ fix-login              │                                                                       "
"   ◆ rate-limit             │       ┌ New worktree in api ─────────────────────────────────┐        "
"   ○ docs-update            │       │  Name    fix-login-redirect                          │        "
" ▾ web                      │       │          branch: fix-login-redirect                  │        "
"   ✔ new-checkout           │       │                                                      │        "
" ▾ lisa                     │       │  Task    Fix the redirect loop on login when the     │        "
"   no worktrees · n         │       │          session cookie has expired                  │        "
"                            │       │                                                      │        "
"                            │       │› Agent   ● claude  routing…                          │        "
"                            │       │          ○ opencode  no full autonomy                │        "
"                            │       │          ○ gemini  not installed                     │        "
"                            │       │                                                      │        "
"                            │       │  Model   ‹ default ›                                 │        "
"                            │       │                                                      │        "
"                            │       │  Mode    (•) normal   ( ) full autonomy              │        "
"                            │       │                                                      │        "
"                            │       │  ⏎ create · tab next field · ←→ change · esc cancel  │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
