workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__sidebar_at_its_narrowest_keeps_the_tag_whole.snap
---
source: src/ui/render_tests.rs
expression: t.backend()
---
" PROJECTS           │                                                                               "
"▐▾ B-Metric         │                                                                               "
"   ◉ fix-inges… api │                LISA                                                           "
"   ◉ dev-… consumer │                                                                               "
"   ◆ dashboard… web │                Map projects. Run agents. Stay in the terminal.                "
" ▾ bloom            │                                                                               "
"   no worktrees · n │                n  starts a worktree in B-Metric                               "
" ▾ lisa             │                p  adds a project or a group                                   "
"   ✔ sidebar-groups │                ?  shows every key                                             "
"                    │                                                                               "
"                    │                1 needs you · 2 working · 1 done         v2.7.0                "
"                    │                                                                               "
"                    │                                                                               "
" ⏎ fold · n new · e rename · d ungroup · ? keys                                                     "
