workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__sidebar_at_its_widest.snap
---
source: src/ui/render_tests.rs
expression: t.backend()
---
" PROJECTS                                       │                                                                       "
"▐▾ B-Metric                                     │                                                                       "
"   ◉ fix-ingest-lag                         api │            LISA                                                       "
"   ◆ dashboard-filter                       web │                                                                       "
" ▾ bloom                                        │            Map projects. Run agents. Stay in the terminal.            "
"   no worktrees · n                             │                                                                       "
" ▾ lisa                                         │            n  starts a worktree in B-Metric                           "
"   ✔ sidebar-groups                             │            p  adds a project or a group                               "
"                                                │            ?  shows every key                                         "
"                                                │                                                                       "
"                                                │            1 needs you · 1 working · 1 done         v0.0.0            "
"                                                │                                                                       "
"                                                │                                                                       "
" ⏎ fold · n new · e rename · d ungroup · ? keys                                                                         "
